# FashionOntoAI

./: README.md  app.py  database.py  main.py  models.py  pyproject.toml  routes.py
.upm/: store.json
static/js/: extraction.js  feedback.js  main.js  ontology.js
templates/: base.html  extraction.html  feedback.html  home.html  ontology.html
templates/errors/: 404.html
utils/: image_processor.py  nlp_processor.py  ontology_manager.py
