[project]
name = "repl-nix-new-repl"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "openai==1.3.5",
    "routes>=2.5.1",
    "sqlalchemy>=2.0.36",
    "email-validator",
    "psycopg2-binary",
    "opencv-python",
    "python-dotenv",
    "opencv-python-headless",
    "numpy>=1.24.3",
    "flask-migrate",
]
